--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -189,7 +189,7 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 }
 
 
-/* SLIDE BOTTOM DEV BDD
+/* TODO SLIDE DEV BLOCK BDD À RATIONNALISER
 -------------------------------------------------- */
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;background:#020109}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url(../images/retina/bg-sign@2x.png) top left repeat-x;}
@@ -198,13 +198,15 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;backgr
 article > h2 {position:absolute;z-index:9999;top:1em;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #020109;width:auto;color:#fff;text-transform: uppercase;}
 figure > h1 {position:absolute;z-index:9999;top:7%;padding:0.5em 0.9em;background-color: #fff;width:auto;color:#020109;text-transform: uppercase;}
 .motif {float:left;margin:1.5em 0 1.5em 0;padding:3.5em 0 0 0;}
-article.blanc > p, article.blanc > a
-{position:absolute;top:0;right:0;display:inline-block;z-index:9999;margin:1.5em 0 1.5em 0;padding:2.5em;line-height:3.2em;background:#020109;width:auto;color:#fff;text-transform:uppercase;letter-spacing:2px;}
+article.blanc > h4
+{position:absolute;top:0.7em;right:-3em;display:inline-block;z-index:9999;margin:1em 2.8em 1em 0;padding:1em 3.8em 3em 1.5em;line-height:2.2em;background:#020109;width:auto;color:#fff;text-transform:uppercase;letter-spacing:2px;}
+article.blanc > p
+{position:absolute;top:0.2em;right:0;z-index:9999;margin:3.5em 0 0.5em 0;padding:1.5em 0.5em 2.5em 1.8em;line-height:1em;background:#020109;width:inherit;color:#fff;text-transform:uppercase;letter-spacing:2px;}
 article.blanc > p a {text-transform:lowercase;}
 article.blanc > p a:hover {color:#fff;text-transform:lowercase;}
 
 #desc-s-sign,#desc-s-text,#desc-s-liter,#desc-s-video
-{float:right;display:inline-block;margin:9.5em 0 0 60%;padding:2.5em 1em 2.5em 2em;line-height:3.2em;background:#020109;color:#fff;text-transform:lowercase;letter-spacing:2px;}
+{float:right;display:inline-block;margin:6.5em 0 0 60%;padding:2.5em 1em 2em 2em;line-height:3.2em;background:#020109;color:#fff;text-transform:lowercase;letter-spacing:2px;}
 
 #slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;background:#111111;}
 #slideIndex .idxContainer{display: inline-block;margin:0;padding:0;}
@@ -344,6 +346,17 @@ body .inner > figure p, body .inner > figure p a{margin:0 1.8em 0 1.8em;font-siz
 #switch-navigation {height:6.8em;
  }
 }
+
+/* DEV CONTENT
+-------------------------------------------------- */
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+{
+.page {height:40%;
+ }
+ }
 
 @media only screen
 and (min-device-width : 768px)
