--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -23,7 +23,7 @@ box-shadow: 0 1px 25px #111;}
 /* TODO FUNCTION NAV
 -------------------------------------------------- */
 
-#nav {position: relative;background:#020109;border-top:0.1rem dashed rgba(255,255,255,0.2);box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);bottom:0; border-bottom:0.1rem dashed rgba(255,255,255,0.2);margin:0;}
+#nav {position: relative;background:#020109;border-top:0.1rem dashed rgba(255,255,255,0.2);box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);bottom:0; border-bottom:0.1rem dashed rgba(255,255,255,0.2);margin:0;background:#020109 url('../images/bg-bottom-chain.png') top left repeat-x;}
 #nav ul {list-style:none;margin:0.3em 4em 0 3.8em;padding:0;text-align:center;}
 #nav li {margin:0 -4px 0 0;padding:0;text-align:center;display:inline-block;width:25%;font-size:18px;text-transform:uppercase;letter-spacing:2px;}
 nav a {text-decoration:none;color:#7d7d79;padding:25px 0;display:block;border-width:0.1em dashed rgba(255,255,255,0.2);border-left:0.1rem dashed rgba(255,255,255,0.2);}
@@ -37,7 +37,8 @@ a.vim:hover, a.tree:hover{background-color:#fff;border:none;}
 a.vim, a.tree {background-position: 15px 5px;display: block;}
 a.vims, a.trees  {background-position: -31px 5px;display: block;}
 
-div > img.tempo {float:left;margin:3em;padding:3em 10em 15em 5em ;width:auto;}
+div > img.tempo {float:left;margin:3em;padding:3em 10em 15em 5em ;height:80%;}
+div > img.tempoA {float:left;margin:0;padding:1.5em 10em 15em 5em ;height:80%;}
 
 /* TODO FUNCTION
 -------------------------------------------------- */
@@ -194,6 +195,9 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 -------------------------------------------------- */
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url('../images/retina/bg-sign@2x.png') top left repeat-x;}
+#s-signA {position:fixed;width:100%;height:100%;overflow:hidden;}
+.pageA{position:relative;z-index:-1;width:100%;height:100%;top:0;}
+aside > div img {float:left;margin:-1.5em 0 0 0;height:80%;}
 .page{position:relative;z-index:-1;width:100%;height:100%;top:0;}
 .page > div img {float:left;margin:-1.5em 0 0 0;height:80%;}
 article > h2 {position:absolute;z-index:9999;top:1em;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #020109;width:auto;color:#fff;text-transform: uppercase;}
