--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -14,10 +14,10 @@ header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 .head .inner, .section-inner {padding:0% 4% 2.2% 11%;}
 .head .text p {display:inline-block;margin:2.6% 3% 0 1.3%;width:27%;}
 
-#block-video {position: relative;top: 0;left: 0;width: 100%;z-index: 999;box-shadow:0px 0px 6px rgba(0,0,0,0.4);-moz-box-sizing:border-box;box-sizing:border-box;
+#block-video {position: relative;top: 0;left: 0;width: 100%;z-index:100;box-shadow:0px 0px 6px rgba(0,0,0,0.4);-moz-box-sizing:border-box;box-sizing:border-box;
 box-shadow: 0 1px 25px #111;}
-#strip {width: 100%;height: 0px;color: #999;background:#020109 url('../images/bg-under-video.png') top left repeat; overflow: hidden;position: relative;z-index: 3;}
-#press {width: 100%;height: 0px;color: #999;overflow: hidden;position: relative;z-index: 3;display:inline-block;}
+#strip {position: relative;z-index: 3;width: 100%;height: 0px;color: #999;background:#020109 url('../images/bg-under-video.png') top left repeat; overflow: hidden;}
+#press {position: relative;z-index: 3;width: 100%;height: 0px;color: #999;overflow: hidden;display:inline-block;}
 #switch-navigation {display:block;width:100%;color:#555;padding:0;border-top:1px solid rgba(255,255,255,.1);height:5em;}
 
 /* TODO FUNCTION NAV
@@ -44,7 +44,7 @@ div > img.tempoA, div > img.tempoB {float:left;margin:1em;padding:0.5em 10em 15e
 -------------------------------------------------- */
 
 .inner > figure {position:relative;text-align:center;width:auto;right:4%;top:0;bottom:0;}
-.inner > figure img{margin:1em 0 2em;padding:0;text-align:center;width:350px;height:auto;}
+.inner > figure img{margin:1em 0 2em;padding:0;text-align:center;width:auto;height:2.5em;}
 .inner > figure p {margin:0 0 1em;padding:0;text-align:center;font-size: 130%;}
 .inner > figure a{margin:0 0 1em;padding:0;text-align:center;}
 
