--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -48,9 +48,8 @@ div > img.tempo {float:left;margin:3em;padding:20em 5em 25em 5em ;height:80%;}
 .inner > figure p {margin:0 0 1em;padding: 1em;text-align:center;font-size: 130%;}
 .inner > figure a{margin:0 0 1em;padding:0;text-align:center;}
 
-img.rules {margin:0em 0 2em;padding:0;text-align:center;width:auto;height:2em;}
-img.rules {margin:-0.3em 0 1em;padding:0;text-align:center;font-size: 130%;}
 
+img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;font-size: 130%;width:auto;height:2em;}
 p.inners {float:right;margin:0 12em 1em 12em;padding:0.5em;text-align:center;font-size: 100%;}
 p.inners a {margin:0 0 1em;padding:0.5em;font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
 
