--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -6,12 +6,12 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2
 -------------------------------------------------- */
 
 body .inner {width:100% inherit;}
-header[role="banner"] {margin:0;padding:2.3% 0 0 7.5%;width:100%;display:inline-block;}
+header[role="banner"] {margin:0;padding:2.3% 0 0 2.5%;width:100%;display:inline-block;}
 header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 
 #rules {width: 100%;height: 100%;color: #999;top:0;overflow: hidden;position: relative;z-index: 3;}
-.head {width:100%;margin:0;background:#020109 url('../images/bg-sign.png') top left repeat-x; }
-.head .inner, .section-inner {padding:0% 4% 2.2% 11%;}
+.head {width:100%;margin:0;background:#020109;}
+.head .inner, .section-inner {padding:0% 4% 1.2% 11%;}
 .head .text p {display:inline-block;margin:2.6% 3% 0 1.3%;width:27%;}
 
 #block-video {position: relative;top: 0;left: 0;width: 100%;z-index:100;box-shadow:0px 0px 6px rgba(0,0,0,0.4);-moz-box-sizing:border-box;box-sizing:border-box;
@@ -45,15 +45,15 @@ div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;heigh
 -------------------------------------------------- */
 
 .inner > figure {position:relative;text-align:center;width:auto;right:4%;top:0;bottom:0;}
-.inner > figure img {margin:1em 0 2em;padding:0;text-align:center;width:auto;height:3.5em;}
+.inner > figure img {margin:0 0 2em;padding:0;text-align:center;width:auto;height:2.5em;}
 .inner > figure p {margin:0 0 1em;padding: 1em;text-align:center;font-size: 130%;}
 .inner > figure a{margin:0 0 1em;padding:0;text-align:center;}
 
 
 img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;font-size: 130%;width:auto;height:2em;}
 
-p.inners {float:right;margin:0 12em 1em 12em;padding:0.5em;text-align:center;font-size: 100%;}
-p.inners a {margin:0 0 1em;padding:0.5em;font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
+p.inners {float:right;margin:0 12em 1em 12em;padding:0 0.5em;text-align:center;font-size: 100%;}
+p.inners a {margin:0 0 1em;padding:0 0.5em;font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
 
 
  /* RESPONSIVE CSS  TODO  & RETINA  TODO
@@ -394,7 +394,7 @@ and (-webkit-min-device-pixel-ratio: 1)
 }
 
 
-.chain div:first-child {width:300px; height:30px; position:absolute; top:50%; left:50%;}
+.chain div:first-child {width:300px; height:10px; position:absolute; top:50%; left:50%;}
 .chain b {width:3%; height:100%; display:block; float:left; animation:chain 3s infinite;-moz-box-sizing: content-box;
 -webkit-box-sizing: content-box;
 box-sizing: content-box;}
@@ -433,7 +433,7 @@ box-sizing: content-box;}
   only screen and (-moz-min-device-pixel-ratio: 2),
   only screen and (-o-min-device-pixel-ratio: 2/1),
   only screen and (min-device-pixel-ratio: 2) {
-.chain b:nth-child(1) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 1.5em 33em; animation-delay:0.2s !important;}
+.chain b:nth-child(1) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 1em 33em; animation-delay:0.2s !important;}
 .chain b:nth-child(2) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.6s !important;}
 .chain b:nth-child(3) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.6s !important;}
 .chain b:nth-child(4) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.8s !important;}
