--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -44,13 +44,13 @@ div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;heigh
 /* TODO FUNCTION
 -------------------------------------------------- */
 
-.inner > figure {position:relative;text-align:center;width:auto;right:4%;top:0;bottom:0;}
-.inner > figure img {margin:0 0 2em;padding:0;text-align:center;width:auto;height:2.5em;}
-.inner > figure p {margin:0 0 1em;padding: 1em;text-align:center;font-size: 130%;}
+.inner > figure {position:relative;text-align:center;width:auto;right:4%;top:-4.7em;bottom:0;}
+.inner > figure img {margin:0 0 2em;padding:0;text-align:center;width:auto;height:2.2em;}
+.inner > figure p {margin:0 0 1em;padding:0 1em;text-align:center;font-size: 130%;}
 .inner > figure a{margin:0 0 1em;padding:0;text-align:center;}
 
 
-img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;font-size: 130%;width:auto;height:2em;}
+img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;width:auto;height:2.1em;}
 
 p.inners {float:right;margin:0 12em 1em 12em;padding:0 0.5em;text-align:center;font-size: 100%;}
 p.inners a {margin:0 0 1em;padding:0 0.5em;font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
@@ -433,7 +433,7 @@ box-sizing: content-box;}
   only screen and (-moz-min-device-pixel-ratio: 2),
   only screen and (-o-min-device-pixel-ratio: 2/1),
   only screen and (min-device-pixel-ratio: 2) {
-.chain b:nth-child(1) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 1em 23em; animation-delay:0.2s !important;}
+.chain b:nth-child(1) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 0.5em 18em; animation-delay:0.2s !important;}
 .chain b:nth-child(2) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.6s !important;}
 .chain b:nth-child(3) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.6s !important;}
 .chain b:nth-child(4) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.8s !important;}
