--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -66,7 +66,7 @@ p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 
 /* TODO BOX OVERLAY STRIP CSS
 -------------------------------------------------- */
-.sp-content {float: none;width: auto;margin:3% 3.2%;height: auto;overflow: hidden;background:#020202 url('../images/MJ-HLG-NR.jpg') top left no-repeat;background-size:100% 100%;box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);-moz-box-sizing:border-box;box-sizing:border-box;
+.sp-content {float: none;width: auto;margin:3% 3.2%;height: auto;overflow: hidden;background:#020202 url('../images/retina/teasing@2x.jpg') top left no-repeat;background-size:100% 100%;box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);-moz-box-sizing:border-box;box-sizing:border-box;
 box-shadow: 1px 1px 1px #111;}
 
 .sp-slideshow input {display:none;}
