--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -190,15 +190,13 @@ section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url('../images/retina/bg-sign@2x.png') top left repeat-x;}
 #s-signA, #s-signB, #s-signC, #s-signD {position:fixed;width:100%;height:100%;overflow:hidden;}
 #ifsign, #iftext, #ifvideo {float:left;margin:1.68em 0 0 0;padding: 22.934375% 0 0 0;width:auto; height:auto;}
-#ifliter0 {float:left;margin-top:-6em;margin-left:20em;padding: 0 3em 10em 0;width:1em; height:auto;}
-#ifliter1 {float:left;margin-top:-6em;margin-left:20em;padding: 0 3em 10em 0;width:1em; height:auto;}
-#ifliter2 {float:left;margin-top:-6em;margin-left:20em;padding: 0 3em 10em 0;width:1em; height:auto;}
+#ifliter0, #ifliter1, #ifliter2 {float:left;margin-top:-6.50em;margin-left:20em;padding: 0 3em 10em 0;width:1em; height:auto;}
 .pageA,.pageB,.pageC,.pageD{position:relative;z-index:-1;width:100%;height:100%;top:0;}
 .page{position:relative;z-index:1;width:100%;height:100%;top:0;}
 aside > div img, .page > div img {float:left;margin:-1.5em 0 0 0;height:80%;}
-article > h2 {position:absolute;z-index:9999;top:1em;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #020109;width:auto;color:#fff;text-transform: uppercase;}
+article > h2 {position:absolute;z-index:9999;top:1em;left:0;padding:0.5em 1.3em;line-height:1.2em;background-color: #020109;width:inherit;color:#fff;text-transform: uppercase;}
 figure > h1 {position:absolute;z-index:9999;top:6%;padding:0.5em 0.9em ;background-color: #fff;width:8.8em;color:#020109;text-transform: uppercase;}
-.vign {position:relative;z-index:9999;top:10em;padding:0.5em 0.9em;background-color:#020109;width:13em;}
+.vign {position:relative;z-index:9999;top:10em;padding:0.5em 1.5em 0 0.5em;background-color:#020109;width:13em;}
 article.blanc > h4
 {position:absolute;top:0.7em;right:-3em;z-index:9999;margin:1em 2.8em 1em 0;padding:1em 2.5em 3em 1.5em;line-height:2.2em;background:#020109;width:auto;color:#999;}
 article.blanc > p
